name:                ah-tagless
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ah-tagless#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
                     , Protolude.Extended
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , text
                     , containers
                     , monad-control
                     , lifted-base
                     , pipes
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , DuplicateRecordFields
                     , LambdaCase
                     , TupleSections
                     , NamedFieldPuns
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , TypeApplications
                     , FlexibleContexts

executable ah-tagless
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , protolude
                     , ah-tagless
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , DuplicateRecordFields
                     , LambdaCase
                     , TupleSections
                     , NamedFieldPuns
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , TypeApplications
                     , FlexibleContexts

test-suite ah-tagless-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ah-tagless
                     , protolude
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , DuplicateRecordFields
                     , LambdaCase
                     , TupleSections
                     , NamedFieldPuns
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , TypeApplications
                     , FlexibleContexts

source-repository head
  type:     git
  location: https://github.com/githubuser/ah-tagless
